[package]
name = "opencl-api"
version = "0.1.0"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>"]
edition = "2018"
description = "LTS maintained OpenCL type associations for Rust"
license = "Apache-2.0"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/diabloxenon/opencl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Updated listing of OpenCL versions.
cl_1_2 = []
cl_2_0 = []
cl_2_1 = []
cl_2_2 = []
cl_3_0 = []

default = ["cl_2_2", "cl_2_1", "cl_2_0"]

all = ["cl_1_2", "cl_2_0", "cl_2_1", "cl_2_2", "cl_3_0"]

[dependencies]
opencl-heads = { version = "0.1.0", path = "../opencl-heads", features = ["all"] }
libc = "0.2.92"