[package]
name = "opencl-api"
version = "0.1.0"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>", "Naman Bishnoi <nmn@n3n.org"]
edition = "2018"
description = "Actively maintained LTS support, OpenCL type associations for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/diabloxenon/opencl"
keywords = ["ffi", "api", "opencl", "gpu", "gpgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Updated listing of OpenCL versions.
cl_1_2 = []
cl_2_0 = []
cl_2_1 = []
cl_2_2 = []
cl_3_0 = []
# Deprecated OpenCL versions.
depr_1_0 = []
depr_1_1 = []
depr_2_0 = []
base = ["cl_1_2"]
default = ["cl_2_1", "cl_2_0", "base"]

all = ["cl_1_2", "cl_2_0", "cl_2_1", "cl_2_2", "cl_3_0"]

[dependencies]
opencl-heads = { version = "0.2.0", path = "../opencl-heads", features = ["all"] }
libc = "0.2.93"