[package]
name = "clinfo"
version = "0.0.1"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>"]
edition = "2018"
description = "OpenCL Property Enumerator purely written in Rust"
license = "Apache-2.0"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/diabloxenon/opencl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl = "0.0.1"
