[package]
name = "opencl-heads"
version = "0.2.1"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>", "Naman Bishnoi <nmn@n3n.org"]
edition = "2018"
description = "Actively Maintained with Long Term Support, Pure Rust Implementation, Low Level bindings for OpenCL"
license = "MIT OR Apache-2.0"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/n3nx/opencl-rs"
keywords = ["ffi", "api", "opencl", "gpu", "gpgpu"]
exclude = ["target/*", "bak/*"]
categories = ["api-bindings", "external-ffi-bindings", "science", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Updated listing of OpenCL versions.
cl_1_1 = []
cl_1_2 = []
cl_2_0 = []
cl_2_1 = []
cl_2_2 = []
cl_3_0 = []
# Deprecated OpenCL versions.
depr_1_0 = []
depr_1_1 = []
depr_2_0 = []

# For drop-in replacement of cl-sys.
opencl_version_1_1 = ["cl_1_1"]
opencl_version_1_2 = ["cl_1_2"]
opencl_version_2_0 = ["cl_2_0"]
opencl_version_2_1 = ["cl_2_1"]
opencl_version_2_2 = ["cl_2_2"]

default = ["cl_1_2", "cl_1_1"]
deprecated = ["depr_2_0", "depr_1_1", "depr_1_0"]
1x = ["cl_1_2", "cl_1_1", "depr_2_0"]
2x = ["cl_2_0", "cl_2_1", "cl_2_2"]
3x = ["cl_3_0"]
all = ["cl_3_0", "cl_2_2", "cl_2_1", "cl_2_0", "cl_1_2", "cl_1_1", "deprecated"]

[dependencies]
libc = "0.2.93"