[package]
name = "opencl"
version = "0.1.0"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>"]
edition = "2018"
description = "Continuously maintained Rust interfaces for Khronos OpenCL API"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/diabloxenon/opencl"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl-heads = "0.0.1"