[package]
name = "opencl"
version = "0.1.0"
authors = ["Xenon Lucifer Diablo <code@nmnx.org>"]
edition = "2018"
description = "Actively maintained LTS supported, Rust interfaces for Khronos OpenCL API"
homepage = "https://nmnx.org/dev/opencl"
repository = "https://github.com/diabloxenon/opencl"
license = "Apache-2.0"
keywords = ["ffi", "api", "opencl", "gpu", "gpgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl-heads = { version = "0.1.0", path = "../opencl-heads" }
opencl-api = { version = "0.1.0", path = "../opencl-api" }
